--- a/BurningLab/BurningLab/BurningLab.csproj
+++ b/BurningLab/BurningLab/BurningLab.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>01eb41d7-82dd-4804-bb75-4d667be3e081</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
