--- a/BurningIdeas/frontend/package.json
+++ b/BurningIdeas/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "eslint-plugin-react-refresh": "^0.4.18",
     "react": "^18.3.1",
