--- a/BurningIdeas/backend/package.json
+++ b/BurningIdeas/backend/package.json
@@ -10,11 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.9.7",
+    "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1"
   }
 }
