--- a/BurningIdeas/frontend/package.json
+++ b/BurningIdeas/frontend/package.json
@@ -12,9 +12,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
+    "esbuild": "^0.25.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
